Updated submodule Group-Repo-2

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "Group-Repo-1"]
 	path = Group-Repo-1
 	url = https://github.com/kreddy228/Group-Repo-1.git
+[submodule "Group-Repo-2"]
+	path = Group-Repo-2
+	url = https://github.com/kreddy228/Group-Repo-2.git
