--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "Group-Repo-2"]
 	path = Group-Repo-2
 	url = https://github.com/kreddy228/Group-Repo-2.git
+[submodule "Group-Repo-3"]
+	path = Group-Repo-3
+	url = https://github.com/kreddy228/Group-Repo-3.git
