--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "Group-Repo-10"]
 	path = Group-Repo-10
 	url = https://github.com/kreddy228/Group-Repo-10.git
+[submodule "Group-Repo-11"]
+	path = Group-Repo-11
+	url = https://github.com/kreddy228/Group-Repo-11.git
